@@ -98,4 +98,4 @@ python_files=test_*.py *_test.py testing/*/*.py
 python_classes=Test Acceptance
 python_functions=test
 pep8ignore = E401 E225 E261 E128 E124 E302
-norecursedirs = .tox ja
+norecursedirs = .tox ja .hg
